<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <Button
        android:id="@+id/availableTimes"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/button_availableTimes_text"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/myReservations"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/button_my_reservations_text"
        android:textColor="@color/black"/>

    <Button
        android:id="@+id/signOut"
        android:layout_width="160dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/rounded_button"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/button_logout_text"
        android:textColor="@color/black"/>

</LinearLayout>
